# bus_message_lib

./: CMakeLists.txt  README.md  doxyfile.cfg  mkdocs.yml  vcpkg.json
.github/workflows/: cmake-linux.yml  cmake-windows.yml  doxygen-gh-pages.yml  github-pages.yml
bustolistend/: CMakeLists.txt
bustolistend/src/: bustolisten.cpp  bustolisten.h  main.cpp
cmake/: busConfig.cmake.in
docs/: 404.html  businterfacefactory_8h_source.html  classbus_1_1_can_data_frame.html  classbus_1_1_i_bus_message.html  classbus_1_1_i_bus_message_queue-members.html  dir_1f624a4e9f42fe292f222bb443c5a070.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  ibusmessage_8h_source.html  ibusmessagequeue_8h_source.html  index.html  inherit_graph_2.md5  inherits.html  namespacemdf.html
docs/about/: index.html
docs/about/licensce/: index.html
docs/html/: annotated.html  annotated_dup.js  businterfacefactory_8h.html  businterfacefactory_8h.js  businterfacefactory_8h__incl.map  businterfacefactory_8h__incl.md5  businterfacefactory_8h_source.html  buslogstream_8h.html  buslogstream_8h.js  buslogstream_8h__incl.map  buslogstream_8h__incl.md5  buslogstream_8h_source.html  candataframe_8h.html  candataframe_8h.js  candataframe_8h__incl.map  candataframe_8h__incl.md5  candataframe_8h_source.html  classbus_1_1_bus_interface_factory-members.html  classbus_1_1_bus_interface_factory.html  classbus_1_1_bus_log_stream-members.html  classbus_1_1_bus_log_stream.html  classbus_1_1_bus_log_stream.js  classbus_1_1_bus_log_stream__coll__graph.map  classbus_1_1_bus_log_stream__inherit__graph.map  classbus_1_1_bus_log_stream__inherit__graph.md5  classbus_1_1_can_data_frame-members.html  classbus_1_1_can_data_frame.html  classbus_1_1_can_data_frame.js  classbus_1_1_can_data_frame__inherit__graph.map  classbus_1_1_i_bus_message-members.html  classbus_1_1_i_bus_message.html  classbus_1_1_i_bus_message.js  classbus_1_1_i_bus_message__inherit__graph.map  classbus_1_1_i_bus_message__inherit__graph.md5  classbus_1_1_i_bus_message_broker-members.html  classbus_1_1_i_bus_message_broker.html  classbus_1_1_i_bus_message_broker.js  classbus_1_1_i_bus_message_broker__inherit__graph.map  classbus_1_1_i_bus_message_queue-members.html  classbus_1_1_i_bus_message_queue.html  (+83 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+19 more)
docs/interface/broker_and_server/: index.html
docs/interface/shared_memory_broker/: index.html
docs/interface/shared_memory_client/: index.html
docs/interface/shared_memory_server/: index.html
docs/interface/tcp_broker/: index.html
docs/interface/tcp_client/: index.html
docs/interface/tcp_server/: index.html
docs/license/: index.html
docs/manual/html/: annotated.html  annotated_dup.js  candataframe_8h.html  candataframe_8h__incl.map  candataframe_8h__incl.md5  candataframe_8h_source.html  classbus_1_1_bus_interface_factory.html  classbus_1_1_bus_log_stream__inherit__graph.md5  classbus_1_1_can_data_frame-members.html  classbus_1_1_can_data_frame.html  classbus_1_1_can_data_frame.js  classes.html  (+30 more)
docs/search/: all_6.js  classes_2.js  enums_0.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  search_index.json
doxygen/: mainpage.dox  namespaces.dox
html/: buslogstream_8h_source.html  candataframe_8h.js  classbus_1_1_bus_log_stream-members.html  classbus_1_1_bus_log_stream__inherit__graph.map  classbus_1_1_can_data_frame__coll__graph.map  classbus_1_1_i_bus_message_broker-members.html  classbus_1_1_i_bus_message_broker__inherit__graph.md5  classbus_1_1_little_buffer.html  classbus_1_1_simulate_broker__inherit__graph.md5  classes.html  dir_1f624a4e9f42fe292f222bb443c5a070_dep.md5  functions_func.html  graph_legend.html  hierarchy.html  ibusmessagebroker_8h_source.html  inherit_graph_2.map  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  menudata.js  namespaces_dup.js  navtreedata.js
html/search/: all_2.js  all_5.js  all_9.js  classes_1.js  enumvalues_1.js  files_0.js  pages_0.js  pages_5.js
include/bus/: buslogstream.h  candataframe.h  ibusmessage.h  ibusmessagebroker.h  ibusmessagequeue.h  littlebuffer.h  simulatebroker.h
interface/: CMakeLists.txt
interface/src/: businterfacefactory.cpp  sharedmemorybroker.cpp  sharedmemorybroker.h  sharedmemoryclient.cpp  sharedmemoryclient.h  sharedmemoryqueue.cpp  sharedmemoryqueue.h  sharedmemoryserver.cpp  sharedmemoryserver.h  sharedmemorytxrxqueue.cpp  sharedmemorytxrxqueue.h  tcpmessagebroker.cpp  tcpmessagebroker.h  tcpmessageclient.cpp  tcpmessageclient.h  tcpmessageconnection.cpp  tcpmessageconnection.h  tcpmessageserver.cpp  tcpmessageserver.h
mkdocs/: index.md  license.md
mkdocs/interface/: broker_and_server.md  shared_memory_broker.md  shared_memory_client.md  shared_memory_server.md  tcp_broker.md  tcp_client.md  tcp_server.md
mkdocs/message/: bus_message.md  can_message.md  control_message.md  message_header.md
script/: boost.cmake
src/: buslogstream.cpp  candataframe.cpp  ibusmessage.cpp  ibusmessagebroker.cpp  ibusmessagequeue.cpp  littlebuffer.cpp  littlebuffer.h  simulatebroker.cpp  simulatebroker.h  simulatequeue.cpp  simulatequeue.h
test/: CMakeLists.txt  test_ibusmessagebroker.cpp  test_ibusmessagequeue.cpp
test/src/: test_buslogstream.cpp  test_bustolisten.cpp  test_candataframe.cpp  test_factory.cpp  test_ibusmessage.cpp  test_ibusmessagebroker.cpp  test_ibusmessagequeue.cpp  test_littlebuffer.cpp  test_sharedmemorybroker.cpp  test_sharedmemoryserver.cpp  test_simulatebroker.cpp  test_tcpmessagebroker.cpp  test_tcpmessageserver.cpp
(+19 files in other folders)
